fix the alignment of all the input fields

--- a/bits/css/common.css
+++ b/bits/css/common.css
@@ -164,24 +164,31 @@ button, input, button, select, textarea {
     background-color: rgb(0, 0, 48);
     border: 2px solid rgb(0, 0, 192);
     border-radius: 4px;
+    vertical-align: middle;
 }
 input[type="text"], input[type="submit"] {
     padding: 0px 6px 0px 6px;
+    vertical-align: middle;
 }
 input[type="radio"], input[type="checkbox"] {
-    visibility: hidden;
+    position: relative !important;
+    visibility: hidden !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    vertical-align: middle;
 }
 .radiobox {
     display: inline;
     position: relative;
     cursor: pointer;
     font-size: 14px;
-    margin-left: 8px;
-    padding-right: 0px;
+    padding: 0px 0px 0px 5.5px;
+    margin: 0px 0px 0px 10px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    vertical-align: middle;
 }
 .radiobox input {
     opacity: 0;
@@ -271,12 +278,13 @@ input[type="radio"], input[type="checkbox"] {
     position: relative;
     cursor: pointer;
     font-size: 14px;
-    margin-left: 8px;
-    padding-right: 8px;
+    padding: 0px 0px 0px 5.5px;
+    margin: 0px 0px 0px 10px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    vertical-align: middle;
 }
 .checkbox input {
     opacity: 0;
@@ -377,7 +385,7 @@ input[type="radio"], input[type="checkbox"] {
     vertical-align: top;
     color: rgb(224, 128, 224);
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 800px) {
     .hide-small {
         border-collapse: collapse;
         visibility: hidden;
@@ -385,8 +393,6 @@ input[type="radio"], input[type="checkbox"] {
         width: 0px;
         height: 0px;
     }
-}
-@media screen and (max-width: 800px) {
     .footer {
         font-size: 13px;
     }
